--- a/innout/src/env.ini
+++ b/innout/src/env.ini
@@ -1,6 +1,4 @@
 host = "localhost"
-username = "ricardo"
-password = "9N5zEepUkqj4IHJK"
-; username = "root"
-; password = ""
+username = "root"
+password = ""
 database = "innout"
